infra/manifests/apps/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: website
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - marafis.com
        - www.marafis.com
      secretName: wildcard-marafis-tls
  rules:
    - host: marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-frontend
                port:
                  number: 80
    - host: www.marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-frontend
                port:
                  number: 80
